# proxycast

./: Cargo.toml  WEB_README.md  start-web.sh
crates/proxycast-api/: Cargo.toml
crates/proxycast-api/src/: error.rs  lib.rs  middleware.rs  state.rs
crates/proxycast-api/src/routes/: config.rs  flow_monitor.rs  mod.rs  provider_pool.rs  resilience.rs  router.rs  server.rs  telemetry.rs
crates/proxycast-core/: Cargo.toml
crates/proxycast-core/src/: lib.rs  server_utils.rs
crates/proxycast-core/src/config/: mod.rs
crates/proxycast-core/src/converter/: anthropic_to_openai.rs
crates/proxycast-core/src/database/: schema.rs
crates/proxycast-core/src/flow_monitor/: replayer.rs
crates/proxycast-core/src/middleware/: tests.rs
crates/proxycast-core/src/models/: anthropic.rs  codewhisperer.rs  openai.rs  provider_pool_model.rs
crates/proxycast-core/src/providers/: traits.rs  vertex.rs
crates/proxycast-core/src/server/handlers/: api.rs  provider_calls.rs
crates/proxycast-core/src/services/: live_sync.rs  machine_id_service.rs  provider_pool_service.rs  switch.rs
crates/proxycast-core/src/telemetry/: tokens.rs
crates/proxycast-server/: Cargo.toml
crates/proxycast-server/src/: main.rs
web/: package-lock.json  package.json  vite.config.ts
web/src/components/clients/: ProviderList.tsx
web/src/components/config/: AuthDirSettings.tsx  ConfigPage.tsx
web/src/components/flow-monitor/: BatchOperations.tsx  BookmarkPanel.tsx  FilterExpressionInput.tsx  FlowDiffView.tsx  FlowList.tsx  InterceptEditor.tsx  InterceptPanel.tsx  QuickFilterPanel.tsx  RelatedFlows.tsx  ReplayDialog.tsx  SessionDetail.tsx  SessionPanel.tsx  index.ts
web/src/components/plugins/: PluginManager.tsx
web/src/components/provider-pool/: AddCredentialModal.tsx  CodexSection.tsx  CredentialCard.tsx  EditCredentialModal.tsx  IFlowSection.tsx  ProviderPoolPage.tsx
web/src/components/provider-pool/credential-forms/: AntigravityForm.tsx  ClaudeOAuthForm.tsx  CodexForm.tsx  GeminiForm.tsx  IFlowForm.tsx  KiroForm.tsx  PlaywrightInstallGuide.tsx  QwenForm.tsx
web/src/components/settings/: AboutSection.tsx  ExtensionsSettings.tsx  TlsSettings.tsx
web/src/components/tools/machine-id/: MachineIdManagePanel.tsx
web/src/components/ui/: button.tsx  dialog.tsx  select.tsx  tooltip.tsx
web/src/components/websocket/: WebSocketStatus.tsx
web/src/hooks/: useAutoFix.ts  useTauri.ts
web/src/lib/: dialog.ts  events.ts  flowEventManager.ts  notifications.ts  shell.ts
web/src/lib/api/: browserInterceptor.ts  client.ts  compat.ts  config.ts  credentials.ts  flowMonitor.ts  index.ts  injection.ts  machineId.ts  mcp.ts  prompts.ts  providerPool.ts  resilience.ts  router.ts  routes.ts  skills.ts  switch.ts  telemetry.ts  usage.ts  window.ts
web/src/lib/tauri/: notificationApi.ts
