[package]
name = "proxycast-api"
version = "0.20.1"
description = "ProxyCast Management API Layer"
authors = ["ProxyCast Team"]
edition = "2021"
repository = "https://github.com/aiclientproxy/proxycast"

[lib]
name = "proxycast_api"
path = "src/lib.rs"

[dependencies]
proxycast-core = { path = "../proxycast-core" }

# HTTP server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Utilities
tracing = "0.1"
thiserror = "1"
