[package]
name = "proxycast-core"
version = "0.20.1"
description = "ProxyCast Core Library - AI API Proxy"
authors = ["ProxyCast Team"]
edition = "2021"
repository = "https://github.com/aiclientproxy/proxycast"

[lib]
name = "proxycast_core"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serde_urlencoded = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"

# HTTP server & client
axum = { version = "0.7", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls-pemfile = "2"
tower = "0.4"
tower-http = { version = "0.5", features = ["limit", "cors"] }
reqwest = { version = "0.12", features = ["json", "stream"] }

# Database
rusqlite = { version = "0.31", features = ["bundled", "backup"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
regex = "1"
md5 = "0.7"
urlencoding = "2"
subtle = "2.5"
flate2 = "1"
fs2 = "0.4"
indexmap = { version = "2", features = ["serde"] }
zip = "0.6"
dashmap = "5"
parking_lot = "0.12"
once_cell = "1"
url = "2"
base64 = "0.22"
bytes = "1"
rand = "0.8"
sha2 = "0.10"
open = "5"
arboard = "3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1"
thiserror = "1"

# Token counting
tiktoken-rs = "0.6"

# File watching
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }

# Platform specific dependencies for browser interceptor (optional)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", optional = true, features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
] }
winapi = { version = "0.3", optional = true, features = [
    "winuser",
    "winreg",
    "processthreadsapi",
    "handleapi",
    "shellapi",
    "psapi",
    "tlhelp32",
] }
winreg = { version = "0.52", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = { version = "0.26", optional = true }
objc = { version = "0.2", optional = true }

[features]
default = []
# Enable platform-specific features (browser interceptor, machine ID)
platform-native = ["windows", "winapi", "winreg", "cocoa", "objc"]

[dev-dependencies]
proptest = "1"
tempfile = "3"
