[package]
name = "proxycast-server"
version = "0.20.1"
description = "ProxyCast Standalone Server"
authors = ["ProxyCast Team"]
edition = "2021"
repository = "https://github.com/aiclientproxy/proxycast"

[[bin]]
name = "proxycast-server"
path = "src/main.rs"

[dependencies]
proxycast-core = { path = "../proxycast-core" }
proxycast-api = { path = "../proxycast-api" }

# HTTP server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }
